--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-masonry-css": "^1.0.14",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "tachyons": "^4.12.0",
     "typescript": "~3.7.2"
   },
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
