updated cname and package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kwtoh.github.io/kaiwu",
+  "homepage": "https://iamkaiwu.tech",
   "name": "kaiwu",
   "version": "0.1.0",
   "private": true,
