--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "simple-react-lightbox": "^3.3.4-1",
     "tachyons": "^4.12.0",
     "typescript": "~3.7.2"
   },
