--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
+    "nodemon": "^2.0.7",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
